--- a/_posts/2014-05-29-norizzk.com.md
+++ b/_posts/2014-05-29-norizzk.com.md
@@ -13,6 +13,8 @@ image: Norizzk_Logo.png
 
 Yesterday, May 28th 2014, a new web application built with [Seaside](http://www.seaside.st) in [Pharo](http://www.pharo.org) and deployed with [GLASS](http://seaside.gemtalksystems.com/) in [Gemstone/S](http://www.gemtalksystems.com) was launched to the world: [norizzk.com](www.norizzk.com).
 
-[Norizzk.com](http://www.norizzk.com) is an innovative platform for risk-based test management. [Watch the trailer](https://www.youtube.com/watch?v=MMqMwl6C-lk) for a short overview on what this is all about.
+[Norizzk.com](http://www.norizzk.com) is an innovative platform for risk-based test management.
+
+<iframe width="560" height="315" src="//www.youtube.com/embed/MMqMwl6C-lk" frameborder="0" allowfullscreen></iframe>
 
 The [inceptive.be](http://www.inceptive.be) team wishes them good luck and we look forward to continue the development collaboration.
